--- a/newfile.html
+++ b/newfile.html
@@ -2,5 +2,7 @@
   <body>
     <h1>first line </h1>
     <p> first paragraph </p>
+    <p> chkdjhvncjkfjhvwdjwfrgf,evjhefguwegjseggg</p>
   </body>
 </html>
+<center> place this in center </center>
